fixed greet card not showing up on edge

--- a/style.css
+++ b/style.css
@@ -586,11 +586,12 @@ body {
 @keyframes fade {
 	0%, 100% { 
 		opacity: 0;
-		display: none;
+		visibility: hidden;
 	}
 
 	50% { 
 		opacity: 1;
+		visibility: visible;
 	}
 }
 
